# hail-mary

./: .gitignore  .mcp.json  ARCHITECTURE.md  BRANCH_PROTECTION.md  CLAUDE.md  COMMANDS.md  Cargo.toml  LICENSE  Makefile  README.md  claude_coverage.html  claude_coverage_new.html  go.mod  go.sum  hooks_coverage.html  justfile  main.go  main_test.go  rust-toolchain.toml  test_mcp_server.sh
.claude-plugin/: marketplace.json
.kiro/: config.toml
cmd/: config.go  config_api.go  hook.go  hook_test.go  list.go  prd.go  prd_continue.go  prd_continue_test.go  prd_init.go  prd_init_test.go  prd_test.go  root.go  root_test.go  ui.go
crates/anthropic-client/: Cargo.toml
crates/anthropic-client/examples/: basic_chat.rs
crates/anthropic-client/src/: lib.rs
crates/hail-mary/: Cargo.toml
crates/hail-mary/migrations/: V002__add_fts5_index.sql
crates/hail-mary/src/: main.rs
crates/hail-mary/src/application/: errors.rs  mod.rs
crates/hail-mary/src/application/repositories/: anthropic_repository.rs  config_repository.rs  mod.rs  project_repository.rs  spec_repository.rs  steering_repository.rs
crates/hail-mary/src/application/test_helpers/: mock_config_repository.rs  mock_project_repository.rs  mock_spec_repository.rs  mock_steering_repository.rs  mod.rs
crates/hail-mary/src/application/use_cases/: backup_steering.rs  complete_features.rs  complete_specs.rs  create_feature.rs  create_spec.rs  initialize_project.rs  launch_claude_with_spec.rs  mod.rs  remind_steering.rs
crates/hail-mary/src/cli/: args.rs  formatters.rs  mod.rs
crates/hail-mary/src/cli/commands/: code.rs  complete.rs  completion.rs  init.rs  mod.rs  new.rs  steering_backup.rs  steering_remind.rs
crates/hail-mary/src/domain/: errors.rs
crates/hail-mary/src/domain/entities/: mod.rs  project.rs  steering.rs  steering_reminder.rs
crates/hail-mary/src/domain/value_objects/: mod.rs  spec.rs  steering.rs  steering_analysis_prompt.rs  system_prompt.rs  system_prompt_template.md
crates/hail-mary/src/domain/value_objects/steering_analysis/: mod.rs  prompt_template.md
crates/hail-mary/src/domain/value_objects/steering_reminder/: mod.rs  template.md
crates/hail-mary/src/domain/value_objects/system_prompt/: base_template.md  mod.rs  specification_section_template.md  steering_template.md  template.md
crates/hail-mary/src/domain/value_objects/system_prompt/legacy-orchestration/: README.md  index.md
crates/hail-mary/src/domain/value_objects/system_prompt/orchestration/: 00_philosophy.md  01_principles.md  03_patterns.md  04_workflows.md  05_gates.md  06_nudges.md  07_requirements.md  10_spec_files.md  README.md  index.md
crates/hail-mary/src/domain/value_objects/system_prompt/pattern_router/: 00_philosophy.md  01_principles.md  02_hub.md  03_patterns.md  04_workflows.md  05_gates.md  06_nudges.md  07_requirements.md  08_investigation.md  09_design.md  10_brainstorming.md  10_spec_files.md  10_spec_files_sbi.md  11_spec_files.md  11_spec_files_sbi.md  README.md  index.md
crates/hail-mary/src/infrastructure/: embedded_resources.rs  mod.rs
crates/hail-mary/src/infrastructure/mcp/: mod.rs
crates/hail-mary/src/infrastructure/migrations/: embedded.rs
crates/hail-mary/src/infrastructure/process/: claude_launcher.rs  mod.rs
crates/hail-mary/src/infrastructure/repositories/: anthropic.rs  config.rs  memory.rs  mod.rs  project.rs  spec.rs  steering.rs
crates/hail-mary/src/infrastructure/tui/: completion_ui.rs  mod.rs  spec_selector.rs
crates/hail-mary/tests/: steering_backup_test.rs  steering_integration_test.rs
docs/: hook-implementation-guide.md  init.md  prd-hook-usage.md  session-hook-architecture.md  settings-merge-guide.md
examples/: session_example.go  session_interactive.go  test-parse-session.go  test_hook.sh
migrations/: 001_initial_schema.sql  002_vector_storage.sql  003_embedding_index.sql  V001__initial_schema.sql  V003__add_triggers.sql
prd/: .session
reference/: claude-code-1-0-72.md  claude-code-opus.md  claude-code-sdk.md  gh-dash.md  hooks.md  mcp-rust-mcp-examples.md  mcp-rust-mcp.md  mcp.md  memory-mcp.md  page-index.md  slash-command-section.md  slash-command-structure.md  vibe-kanban.md  wasm.md  wazero.md  zellij-plugin-simply.md  zellij-plugin.md
rust-wasm/: Cargo.toml
scripts/: fix-completion.sh
src/: lib.rs  main.rs
system-prompt/: prd.md
test-docs/: project-tech.md
test-docs-2/: domain.md  tech.md
tests/: dedup_test.rs  delete_functionality_test.rs  document_generation_test.rs  e2e_comprehensive_main.rs  embedding_crud_test.rs  embedding_test.rs  init_command.rs  integration_project_service.rs  integration_repository_test.rs  japanese_query_test.rs  mcp_edge_case_test.rs  mcp_recall_debug_test.rs  (+4 more)
(+431 files in other folders)
