[package]
name = "hail-mary"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Core
tokio = { version = "1", features = ["full", "test-util"] }
anyhow = "1"
thiserror = "1"

# MCP Protocol
rmcp = { version = "0.5.0", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pulldown-cmark = "0.13"

[dev-dependencies]
rstest = "0.23"
pretty_assertions = "1"
tempfile = "3"
