[workspace]
members = ["crates/hail-mary", "crates/anthropic-client"]
resolver = "2"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Core
tokio = { version = "1", features = ["full", "test-util"] }
anyhow = "1"
thiserror = "1"

# MCP Protocol
rmcp = { version = "0.5.0", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.33", features = ["bundled"] }
refinery = { version = "0.8.16", features = ["rusqlite"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pulldown-cmark = "0.13"
regex = "1"

