[workspace]
members = ["crates/hail-mary", "crates/anthropic-client"]
resolver = "2"

[workspace.dependencies]
# CLI
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = "4.5.58"

# Core
tokio = { version = "1", features = ["full", "test-util"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TUI
ratatui = "0.29"
crossterm = "0.29"
chrono = "0.4"
toml = "0.9"
regex = "1"

