[package]
name = "anthropic-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = [
    "rustls-tls-native-roots",
    "json",
    "cookies",
    "gzip",
    "brotli", 
    "deflate",
    "zstd",
    "charset",
    "http2",
    "stream"
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
dirs = "6.0"

[[example]]
name = "basic_chat"
path = "examples/basic_chat.rs"