[package]
name = "hail-mary"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { workspace = true }
clap_complete = { workspace = true }

# Core
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# JSON/Configuration  
serde = { workspace = true }
serde_json = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pulldown-cmark = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
rstest = "0.23"
pretty_assertions = "1"
tempfile = "3"