[package]
name = "hail-mary"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { workspace = true }
clap_complete = { workspace = true }

# Core
anyhow = { workspace = true }
thiserror = { workspace = true }

# JSON/Configuration
serde = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Utils
chrono = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }

# Internal crates
anthropic-client = { path = "../anthropic-client" }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
